Deploy/host_projections_deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: room-booking-host-projections-svc
  namespace: room-booking-host
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: room-booking-host-projections
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-booking-host-projections
  namespace: room-booking-host
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room-booking-host-projections
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: room-booking-host-projections
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: room-booking-host-projections
        image: michaelhorsley/room-booking-host-projections:<VERSION_NUMBER>
        imagePullPolicy: IfNotPresent
        resources:
            limits:
              memory: 1Gi
