Deploy/api_deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: room-booking-host-minion
  namespace: room-booking-host
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: "host-api"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: room-booking-host-api-svc
            port: 
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: room-booking-host-api-svc
  namespace: room-booking-host
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: room-booking-host-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-booking-host-api
  namespace: room-booking-host
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room-booking-host-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: room-booking-host-api
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: room-booking-host-api
        image: michaelhorsley/room-booking-host-api:<VERSION_NUMBER>
        imagePullPolicy: IfNotPresent
        resources:
            limits:
              memory: 1Gi
