Deploy/logging_deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seq-logging-minion
  namespace: common
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: "seq-logging"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seq-logging-svc
            port: 
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: seq-logging-svc
  namespace: common
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: data
    port: 5341
    targetPort: 5341
    protocol: TCP
  selector:
    app: seq-logging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seq-logging
  namespace: common
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seq-logging
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: seq-logging
    spec:
      containers:
      - name: seq-logging
        image: datalust/seq:2022.1.7929-arm64
        imagePullPolicy: IfNotPresent
        resources:
            limits:
              memory: 4Gi
